--- a/Inline/style.css
+++ b/Inline/style.css
@@ -1,4 +1,12 @@
+body{
+	padding-top: 30px;
+}
+
 div{
 	border: 1px solid black;
+	display: inline-block;
+	padding: 5px;
+	margin: 30px;
+	width: 100px;
 }
 
