--- a/Assessment/absoluteStyle.css
+++ b/Assessment/absoluteStyle.css
@@ -15,7 +15,7 @@ article{
 	width:600px;
 	height:400px;
 	padding: 10px;
-
+	position: relative;
 }
 
 
@@ -33,6 +33,9 @@ h2{
 	border: solid black 1px;
 	padding:4px;
 	width:250px;
+	position:absolute;
+	left: 340px;
+	top: 30px;
 }
 
 p{
@@ -44,6 +47,9 @@ figure{
 	width:200px;
 	height:200px;
 	border: solid black 1px;
+	position:absolute;
+	left: 340px;
+	top: 80px;
 
 }
 
